# Store-API

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml
app/: __init__.py  schemas.py
app/models/: models.py
app/routes/: item.py  store.py  user.py
